--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             >Web<span class="logo-spanone">Studio</span></a
           >
           <ul class="nav-ul">
-            <li><a class="studio" href="./index.html">Studio</a></li>
-            <li><a class="studio" href="">Portfolio</a></li>
-            <li><a class="studio" href="">Contacts</a></li>
+            <li><a class="nav-link current-nav-link" href="./index.html">Studio</a></li>
+            <li><a class="nav-link current-nav-link" href="">Portfolio</a></li>
+            <li><a class="nav-link current-nav-link" href="">Contacts</a></li>
           </ul>
         </nav>
         <address class="contacts">
@@ -63,6 +63,11 @@
           <h2 class="visually-hidden"></h2>
           <ul class="sectwo-ul">
             <li class="sectwo-li">
+              <div class="sectwo-container">
+                <svg class="sectwo-svg" width="40" height="40">
+                  <use href="./images/sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="sectwo-title">Strategy</h3>
               <p class="sectwo-parag">
                 Our goal is to identify the business problem to walk away with
@@ -70,6 +75,11 @@
               </p>
             </li>
             <li class="sectwo-li">
+              <div class="sectwo-container">
+              <svg class="sectwo-svg" width="40" height="40">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
+            </div>
               <h3 class="sectwo-title">Punctuality</h3>
               <p class="sectwo-parag">
                 Bring the key message to the brand's audience for the best price
@@ -77,6 +87,11 @@
               </p>
             </li>
             <li class="sectwo-li">
+              <div class="sectwo-container">
+                <svg class="sectwo-svg" width="40" height="40">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="sectwo-title">Diligence</h3>
               <p class="sectwo-parag">
                 Research and confirm brands that present the strongest digital
@@ -84,6 +99,11 @@
               </p>
             </li>
             <li class="sectwo-li">
+              <div class="sectwo-container">
+                <svg class="sectwo-svg" width="40" height="40">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="sectwo-title">Technologies</h3>
               <p class="sectwo-parag">
                 Design practice focused on digital experiences. We bring forth a
@@ -180,14 +200,13 @@
     </main>
     <footer class="footer">
       <div class="container">
-      
         <a class="logo-two" href="./index.html"
-        >Web<span class="logo-spantwo">Studio</span></a
-      >
-      <p class="footer-parag">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+          >Web<span class="logo-spantwo">Studio</span></a
+        >
+        <p class="footer-parag">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
