--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
           >
           <ul class="nav-ul">
             <li><a class="nav-link current-nav-link" href="./index.html">Studio</a></li>
-            <li><a class="nav-link current-nav-link" href="">Portfolio</a></li>
-            <li><a class="nav-link current-nav-link" href="">Contacts</a></li>
+            <li><a class="nav-link " href="">Portfolio</a></li>
+            <li><a class="nav-link " href="">Contacts</a></li>
           </ul>
         </nav>
         <address class="contacts">
