--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <li class="sectwo-li">
               <div class="sectwo-container">
               <svg class="sectwo-svg" width="64" height="64">
-                <use href="./images/icons.svg#icon-clock"></use>
+                <use href="./images/sprite.svg#icon-clock"></use>
               </svg>
             </div>
               <h3 class="sectwo-title">Punctuality</h3>
@@ -89,7 +89,7 @@
             <li class="sectwo-li">
               <div class="sectwo-container">
                 <svg class="sectwo-svg" width="64" height="64">
-                  <use href="./images/icons.svg#icon-diagram"></use>
+                  <use href="./images/sprite.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="sectwo-title">Diligence</h3>
@@ -101,7 +101,7 @@
             <li class="sectwo-li">
               <div class="sectwo-container">
                 <svg class="sectwo-svg" width="64" height="64">
-                  <use href="./images/icons.svg#icon-astronaut"></use>
+                  <use href="./images/sprite.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="sectwo-title">Technologies</h3>
@@ -122,6 +122,17 @@
               <div class="team-box">
                 <h3 class="person">Mark Guerrero</h3>
                 <p class="person-parag">Product Designer</p>
+                <div class="social">
+                  <ul class="social-ul">
+                    <li class="social-li">
+                      <a class="social-a" href="">
+                        <svg class="icon-linkedin" widht="16" height="16">
+                          <use href="./images/sprite.svg#icon-linkadin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-list">
