--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <li class="sectwo-li">
               <div class="sectwo-container">
                 <svg class="sectwo-svg" width="64" height="64">
-                  <use href="./images/sprite.svg#icon-antenna"></use>
+                  <use href="./images/icon.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="sectwo-title">Strategy</h3>
@@ -77,7 +77,7 @@
             <li class="sectwo-li">
               <div class="sectwo-container">
               <svg class="sectwo-svg" width="64" height="64">
-                <use href="./images/sprite.svg#icon-clock"></use>
+                <use href="./images/icon.svg#icon-clock"></use>
               </svg>
             </div>
               <h3 class="sectwo-title">Punctuality</h3>
@@ -89,7 +89,7 @@
             <li class="sectwo-li">
               <div class="sectwo-container">
                 <svg class="sectwo-svg" width="64" height="64">
-                  <use href="./images/sprite.svg#icon-diagram"></use>
+                  <use href="./images/icon.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="sectwo-title">Diligence</h3>
@@ -101,7 +101,7 @@
             <li class="sectwo-li">
               <div class="sectwo-container">
                 <svg class="sectwo-svg" width="64" height="64">
-                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                  <use href="./images/icon.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="sectwo-title">Technologies</h3>
@@ -126,8 +126,29 @@
                   <ul class="social-ul">
                     <li class="social-li">
                       <a class="social-a" href="">
-                        <svg class="icon-linkedin" widht="16" height="16">
-                          <use href="./images/sprite.svg#icon-linkadin"></use>
+                        <svg class="social-svg" widht="16" height="16">
+                          <use href="./images/icon.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-li">
+                      <a class="social-a" href="">
+                        <svg class="social-svg" widht="16" height="16">
+                          <use href="./images/icon.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-li">
+                      <a class="social-a" href="">
+                        <svg class="social-svg" widht="16" height="16">
+                          <use href="./images/icon.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-li">
+                      <a class="social-a" href="">
+                        <svg class="social-svg" widht="16" height="16">
+                          <use href="./images/icon.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
