--- a/index.html
+++ b/index.html
@@ -30,19 +30,23 @@
             >Web<span class="logo-spanone">Studio</span></a
           >
           <ul class="nav-ul">
-            <li><a class="nav-link current-nav-link" href="./index.html">Studio</a></li>
-            <li><a class="nav-link " href="">Portfolio</a></li>
-            <li><a class="nav-link " href="">Contacts</a></li>
+            <li>
+              <a class="nav-link current-nav-link" href="./index.html"
+                >Studio</a
+              >
+            </li>
+            <li><a class="nav-link" href="">Portfolio</a></li>
+            <li><a class="nav-link" href="">Contacts</a></li>
           </ul>
         </nav>
         <address class="contacts">
           <ul class="contacts-ul">
-            <li>
+            <li calass="contacts-li">
               <a class="contacts-a" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="=contacts-li">
               <a class="contacts-a" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
@@ -76,10 +80,10 @@
             </li>
             <li class="sectwo-li">
               <div class="sectwo-container">
-              <svg class="sectwo-svg" width="64" height="64">
-                <use href="./images/icon.svg#icon-clock"></use>
-              </svg>
-            </div>
+                <svg class="sectwo-svg" width="64" height="64">
+                  <use href="./images/icon.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="sectwo-title">Punctuality</h3>
               <p class="sectwo-parag">
                 Bring the key message to the brand's audience for the best price
@@ -122,38 +126,36 @@
               <div class="team-box">
                 <h3 class="person">Mark Guerrero</h3>
                 <p class="person-parag">Product Designer</p>
-                <div class="social">
-                  <ul class="social-ul">
-                    <li class="social-li">
-                      <a class="social-a" href="">
-                        <svg class="social-svg" widht="16" height="16">
-                          <use href="./images/icon.svg#icon-instagram"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-li">
-                      <a class="social-a" href="">
-                        <svg class="social-svg" widht="16" height="16">
-                          <use href="./images/icon.svg#icon-twitter"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-li">
-                      <a class="social-a" href="">
-                        <svg class="social-svg" widht="16" height="16">
-                          <use href="./images/icon.svg#icon-facebook"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-li">
-                      <a class="social-a" href="">
-                        <svg class="social-svg" widht="16" height="16">
-                          <use href="./images/icon.svg#icon-linkedin"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+                <ul class="social-ul">
+                  <li class="social-li">
+                    <a class="social-a" href="">
+                      <svg class="social-svg" widht="16" height="16">
+                        <use href="./images/icon.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-li">
+                    <a class="social-a" href="">
+                      <svg class="social-svg" widht="16" height="16">
+                        <use href="./images/icon.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-li">
+                    <a class="social-a" href="">
+                      <svg class="social-svg" widht="16" height="16">
+                        <use href="./images/icon.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-li">
+                    <a class="social-a" href="">
+                      <svg class="social-svg" widht="16" height="16">
+                        <use href="./images/icon.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list">
@@ -161,6 +163,36 @@
               <div class="team-box">
                 <h3 class="person">Tom Ford</h3>
                 <p class="person-parag">Frontend Developer</p>
+                <ul class="social-ul">
+                  <li class="social-li">
+                    <a class="social-a" href="">
+                      <svg class="social-svg" widht="16" height="16">
+                        <use href="./images/icon.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-li">
+                    <a class="social-a" href="">
+                      <svg class="social-svg" widht="16" height="16">
+                        <use href="./images/icon.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-li">
+                    <a class="social-a" href="">
+                      <svg class="social-svg" widht="16" height="16">
+                        <use href="./images/icon.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-li">
+                    <a class="social-a" href="">
+                      <svg class="social-svg" widht="16" height="16">
+                        <use href="./images/icon.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list">
@@ -168,6 +200,36 @@
               <div class="team-box">
                 <h3 class="person">Camila Garcia</h3>
                 <p class="person-parag">Marketing</p>
+                <ul class="social-ul">
+                  <li class="social-li">
+                    <a class="social-a" href="">
+                      <svg class="social-svg" widht="16" height="16">
+                        <use href="./images/icon.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-li">
+                    <a class="social-a" href="">
+                      <svg class="social-svg" widht="16" height="16">
+                        <use href="./images/icon.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-li">
+                    <a class="social-a" href="">
+                      <svg class="social-svg" widht="16" height="16">
+                        <use href="./images/icon.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-li">
+                    <a class="social-a" href="">
+                      <svg class="social-svg" widht="16" height="16">
+                        <use href="./images/icon.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list">
@@ -175,6 +237,36 @@
               <div class="team-box">
                 <h3 class="person">Daniel Wilson</h3>
                 <p class="person-parag">UI Designer</p>
+                <ul class="social-ul">
+                  <li class="social-li">
+                    <a class="social-a" href="">
+                      <svg class="social-svg" widht="16" height="16">
+                        <use href="./images/icon.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-li">
+                    <a class="social-a" href="">
+                      <svg class="social-svg" widht="16" height="16">
+                        <use href="./images/icon.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-li">
+                    <a class="social-a" href="">
+                      <svg class="social-svg" widht="16" height="16">
+                        <use href="./images/icon.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-li">
+                    <a class="social-a" href="">
+                      <svg class="social-svg" widht="16" height="16">
+                        <use href="./images/icon.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
