--- a/index.html
+++ b/index.html
@@ -277,10 +277,14 @@
           <h2 class="portfolio">Our Portfolio</h2>
           <ul class="row">
             <li class="row-li">
-              <img src="./images/img5.jpg" alt="5.resim" width="360" />
-              <div class="row-box">
-                <h3 class="row-title">Banking App</h3>
-                <p class="row-parag">App</p>
+              <div class="row-wrap">
+                <img src="./images/img5.jpg" alt="5.resim" width="360" />
+                <p class="row-text">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app ·
+                cloud storage app</p>
+                </div>
+                <div  class="product-list">
+                  <h3 class="row-title">Banking App</h3>
+                  <p class="row-parag">App</p>
               </div>
             </li>
             <li class="row-li">
