--- a/index.html
+++ b/index.html
@@ -279,45 +279,83 @@
             <li class="row-li">
               <div class="row-wrap">
                 <img src="./images/img5.jpg" alt="5.resim" width="360" />
-                <p class="row-text">14 stylish and user-friendly app design concepts · task manager app · calorie tracker app · exotic fruit ecommerce app ·
-                cloud storage app</p>
-                </div>
-                <div  class="product-list">
-                  <h3 class="row-title">Banking App</h3>
-                  <p class="row-parag">App</p>
+                <p class="row-text">
+                  14 stylish and user-friendly app design concepts · task
+                  manager app · calorie tracker app · exotic fruit ecommerce app
+                  · cloud storage app
+                </p>
+              </div>
+              <div class="product-list">
+                <h3 class="row-title">Banking App</h3>
+                <p class="row-parag">App</p>
               </div>
             </li>
             <li class="row-li">
-              <img src="./images/img6.jpg" alt="6.resim" width="360" />
-              <div class="row-box">
+              <div class="row-wrap">
+                <img src="./images/img6.jpg" alt="6.resim" width="360" />
+                <p class="row-text">
+                  14 stylish and user-friendly app design concepts · task
+                  manager app · calorie tracker app · exotic fruit ecommerce app
+                  · cloud storage app
+                </p>
+              </div>
+              <div class="product-list">
                 <h3 class="row-title">Cashless Payment</h3>
                 <p class="row-parag">Marketing</p>
               </div>
             </li>
             <li class="row-li">
-              <img src="./images/img7.jpg" alt="7.resim" width="360" />
-              <div class="row-box">
+              <div class="row-wrap">
+                <img src="./images/img7.jpg" alt="7.resim" width="360" />
+                <p class="row-text">
+                  14 stylish and user-friendly app design concepts · task
+                  manager app · calorie tracker app · exotic fruit ecommerce app
+                  · cloud storage app
+                </p>
+              </div>
+              <div class="product-list">
                 <h3 class="row-title">Meditation App</h3>
                 <p class="row-parag">App</p>
               </div>
             </li>
             <li class="row-li">
-              <img src="./images/img8.jpg" alt="8.resim" width="360" />
-              <div class="row-box">
+              <div class="row-wrap">
+                <img src="./images/img8.jpg" alt="8.resim" width="360" />
+                <p class="row-text">
+                  14 stylish and user-friendly app design concepts · task
+                  manager app · calorie tracker app · exotic fruit ecommerce app
+                  · cloud storage app
+                </p>
+              </div>
+              <div class="product-list">
                 <h3 class="row-title">Taxi Service</h3>
                 <p class="row-parag">Marketing</p>
               </div>
             </li>
             <li class="row-li">
-              <img src="./images/img9.jpg" alt="9.resim" width="360" />
-              <div class="row-box">
+              <div class="row-wrap">
+                <img src="./images/img9.jpg" alt="9.resim" width="360" />
+                <p class="row-text">
+                  14 stylish and user-friendly app design concepts · task
+                  manager app · calorie tracker app · exotic fruit ecommerce app
+                  · cloud storage app
+                </p>
+              </div>
+              <div class="product-list">
                 <h3 class="row-title">Screen Illustrations</h3>
                 <p class="row-parag">Design</p>
               </div>
             </li>
             <li class="row-li">
-              <img src="./images/img10.jpg" alt="10.resim" width="360" />
-              <div class="row-box">
+              <div class="row-wrap">
+                <img src="./images/img10.jpg" alt="10.resim" width="360" />
+                <p class="row-text">
+                  14 stylish and user-friendly app design concepts · task
+                  manager app · calorie tracker app · exotic fruit ecommerce app
+                  · cloud storage app
+                </p>
+              </div>
+              <div class="product-list">
                 <h3 class="row-title">Online Courses</h3>
                 <p class="row-parag">Marketing</p>
               </div>
