--- a/index.html
+++ b/index.html
@@ -280,9 +280,8 @@
               <div class="row-wrap">
                 <img src="./images/img5.jpg" alt="5.resim" width="360" />
                 <p class="row-text">
-                  14 stylish and user-friendly app design concepts · task
-                  manager app · calorie tracker app · exotic fruit ecommerce app
-                  · cloud storage app
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                  Cloud Storage App
                 </p>
               </div>
               <div class="product-list">
@@ -294,9 +293,8 @@
               <div class="row-wrap">
                 <img src="./images/img6.jpg" alt="6.resim" width="360" />
                 <p class="row-text">
-                  14 stylish and user-friendly app design concepts · task
-                  manager app · calorie tracker app · exotic fruit ecommerce app
-                  · cloud storage app
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                  Cloud Storage App
                 </p>
               </div>
               <div class="product-list">
@@ -308,9 +306,8 @@
               <div class="row-wrap">
                 <img src="./images/img7.jpg" alt="7.resim" width="360" />
                 <p class="row-text">
-                  14 stylish and user-friendly app design concepts · task
-                  manager app · calorie tracker app · exotic fruit ecommerce app
-                  · cloud storage app
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                  Cloud Storage App
                 </p>
               </div>
               <div class="product-list">
@@ -322,9 +319,8 @@
               <div class="row-wrap">
                 <img src="./images/img8.jpg" alt="8.resim" width="360" />
                 <p class="row-text">
-                  14 stylish and user-friendly app design concepts · task
-                  manager app · calorie tracker app · exotic fruit ecommerce app
-                  · cloud storage app
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                  Cloud Storage App
                 </p>
               </div>
               <div class="product-list">
@@ -336,9 +332,8 @@
               <div class="row-wrap">
                 <img src="./images/img9.jpg" alt="9.resim" width="360" />
                 <p class="row-text">
-                  14 stylish and user-friendly app design concepts · task
-                  manager app · calorie tracker app · exotic fruit ecommerce app
-                  · cloud storage app
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                  Cloud Storage App
                 </p>
               </div>
               <div class="product-list">
@@ -350,9 +345,8 @@
               <div class="row-wrap">
                 <img src="./images/img10.jpg" alt="10.resim" width="360" />
                 <p class="row-text">
-                  14 stylish and user-friendly app design concepts · task
-                  manager app · calorie tracker app · exotic fruit ecommerce app
-                  · cloud storage app
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                  Cloud Storage App
                 </p>
               </div>
               <div class="product-list">
