--- a/index.html
+++ b/index.html
@@ -280,8 +280,9 @@
               <div class="row-wrap">
                 <img src="./images/img5.jpg" alt="5.resim" width="360" />
                 <p class="row-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                  Cloud Storage App
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
                 </p>
               </div>
               <div class="product-list">
@@ -293,8 +294,9 @@
               <div class="row-wrap">
                 <img src="./images/img6.jpg" alt="6.resim" width="360" />
                 <p class="row-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                  Cloud Storage App
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
                 </p>
               </div>
               <div class="product-list">
@@ -306,8 +308,9 @@
               <div class="row-wrap">
                 <img src="./images/img7.jpg" alt="7.resim" width="360" />
                 <p class="row-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                  Cloud Storage App
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
                 </p>
               </div>
               <div class="product-list">
@@ -319,8 +322,9 @@
               <div class="row-wrap">
                 <img src="./images/img8.jpg" alt="8.resim" width="360" />
                 <p class="row-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                  Cloud Storage App
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
                 </p>
               </div>
               <div class="product-list">
@@ -332,8 +336,9 @@
               <div class="row-wrap">
                 <img src="./images/img9.jpg" alt="9.resim" width="360" />
                 <p class="row-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                  Cloud Storage App
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
                 </p>
               </div>
               <div class="product-list">
@@ -345,8 +350,9 @@
               <div class="row-wrap">
                 <img src="./images/img10.jpg" alt="10.resim" width="360" />
                 <p class="row-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                  Cloud Storage App
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
                 </p>
               </div>
               <div class="product-list">
@@ -360,13 +366,48 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="logo-two" href="./index.html"
-          >Web<span class="logo-spantwo">Studio</span></a
-        >
-        <p class="footer-parag">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-wrap">
+          <a class="logo-two" href="./index.html"
+            >Web<span class="logo-spantwo">Studio</span></a
+          >
+          <p class="footer-parag">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-socials-wrap">
+          <p class="footer-socials-title">Social Media</p>
+          <ul class="footer-socials-list">
+            <li class="footer-socials-item">
+              <a class="footer-socials-link" href="">
+                <svg class="footer-socials-icon" widht="24" height="24">
+                  <use href="./images/icon.svg#instagram-icon"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-item">
+              <a class="footer-socials-link" href="">
+                <svg class="footer-socials-icon" widht="24" height="24">
+                  <use href="./images/icon.svg#twitter-icon"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-item">
+              <a class="footer-socials-link" href="">
+                <svg class="footer-socials-icon" widht="24" height="24">
+                  <use href="./images/icon.svg#facebook-icon"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-item">
+              <a class="footer-socials-link" href="">
+                <svg class="footer-socials-icon" widht="24" height="24">
+                  <use href="./images/icon.svg#linkedin-icon"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
