--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
           </p>
         </div>
         <div class="footer-socials-wrap">
-          <p class="footer-socials-title">Social Media</p>
+          <p class="footer-socials-title">Social media</p>
           <ul class="footer-socials-list">
             <li class="footer-socials-item">
               <a class="footer-socials-link" href="">
