--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </nav>
         <address class="contacts">
           <ul class="contacts-ul">
-            <li calass="contacts-li">
+            <li class="contacts-li">
               <a class="contacts-a" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
@@ -381,28 +381,28 @@
             <li class="footer-socials-item">
               <a class="footer-socials-link" href="">
                 <svg class="footer-socials-icon" widht="24" height="24">
-                  <use href="./images/icon.svg#instagram-icon"></use>
+                  <use href="./images/icon.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-item">
               <a class="footer-socials-link" href="">
                 <svg class="footer-socials-icon" widht="24" height="24">
-                  <use href="./images/icon.svg#twitter-icon"></use>
+                  <use href="./images/icon.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-item">
               <a class="footer-socials-link" href="">
                 <svg class="footer-socials-icon" widht="24" height="24">
-                  <use href="./images/icon.svg#facebook-icon"></use>
+                  <use href="./images/icon.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-item">
               <a class="footer-socials-link" href="">
                 <svg class="footer-socials-icon" widht="24" height="24">
-                  <use href="./images/icon.svg#linkedin-icon"></use>
+                  <use href="./images/icon.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
