--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <ul class="sectwo-ul">
             <li class="sectwo-li">
               <div class="sectwo-container">
-                <svg class="sectwo-svg" width="64" height="64">
+                <svg class="sectwo-svg">
                   <use href="./images/icon.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -80,7 +80,7 @@
             </li>
             <li class="sectwo-li">
               <div class="sectwo-container">
-                <svg class="sectwo-svg" width="64" height="64">
+                <svg class="sectwo-svg">
                   <use href="./images/icon.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -92,7 +92,7 @@
             </li>
             <li class="sectwo-li">
               <div class="sectwo-container">
-                <svg class="sectwo-svg" width="64" height="64">
+                <svg class="sectwo-svg">
                   <use href="./images/icon.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -104,7 +104,7 @@
             </li>
             <li class="sectwo-li">
               <div class="sectwo-container">
-                <svg class="sectwo-svg" width="64" height="64">
+                <svg class="sectwo-svg">
                   <use href="./images/icon.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -129,28 +129,28 @@
                 <ul class="social-ul">
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg" widht="16" height="16">
+                      <svg class="social-svg">
                         <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg" widht="16" height="16">
+                      <svg class="social-svg">
                         <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg" widht="16" height="16">
+                      <svg class="social-svg">
                         <use href="./images/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg" widht="16" height="16">
+                      <svg class="social-svg">
                         <use href="./images/icon.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -166,28 +166,28 @@
                 <ul class="social-ul">
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg" widht="16" height="16">
+                      <svg class="social-svg">
                         <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg" widht="16" height="16">
+                      <svg class="social-svg">
                         <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg" widht="16" height="16">
+                      <svg class="social-svg">
                         <use href="./images/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg" widht="16" height="16">
+                      <svg class="social-svg">
                         <use href="./images/icon.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -203,28 +203,28 @@
                 <ul class="social-ul">
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg" widht="16" height="16">
+                      <svg class="social-svg">
                         <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg" widht="16" height="16">
+                      <svg class="social-svg">
                         <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg" widht="16" height="16">
+                      <svg class="social-svg">
                         <use href="./images/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg" widht="16" height="16">
+                      <svg class="social-svg">
                         <use href="./images/icon.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -240,28 +240,28 @@
                 <ul class="social-ul">
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg" widht="16" height="16">
+                      <svg class="social-svg">
                         <use href="./images/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg" widht="16" height="16">
+                      <svg class="social-svg">
                         <use href="./images/icon.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg" widht="16" height="16">
+                      <svg class="social-svg">
                         <use href="./images/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-li">
                     <a class="social-a" href="">
-                      <svg class="social-svg" widht="16" height="16">
+                      <svg class="social-svg">
                         <use href="./images/icon.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -380,28 +380,28 @@
           <ul class="footer-socials-list">
             <li class="footer-socials-item">
               <a class="footer-socials-link" href="">
-                <svg class="footer-socials-icon" widht="24" height="24">
+                <svg class="footer-socials-icon" >
                   <use href="./images/icon.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-item">
               <a class="footer-socials-link" href="">
-                <svg class="footer-socials-icon" widht="24" height="24">
+                <svg class="footer-socials-icon" >
                   <use href="./images/icon.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-item">
               <a class="footer-socials-link" href="">
-                <svg class="footer-socials-icon" widht="24" height="24">
+                <svg class="footer-socials-icon">
                   <use href="./images/icon.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-item">
               <a class="footer-socials-link" href="">
-                <svg class="footer-socials-icon" widht="24" height="24">
+                <svg class="footer-socials-icon">
                   <use href="./images/icon.svg#icon-linkedin"></use>
                 </svg>
               </a>
