--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <li class="sectwo-li">
               <div class="sectwo-container">
                 <svg class="sectwo-svg">
-                  <use href="./images/icon.svg#icon-antenna"></use>
+                  <use href="./images/icon.svg#icon-antenna" width="64px" height="64px"></use>
                 </svg>
               </div>
               <h3 class="sectwo-title">Strategy</h3>
@@ -81,7 +81,7 @@
             <li class="sectwo-li">
               <div class="sectwo-container">
                 <svg class="sectwo-svg">
-                  <use href="./images/icon.svg#icon-clock"></use>
+                  <use href="./images/icon.svg#icon-clock" width="64px" height="64px"></use>
                 </svg>
               </div>
               <h3 class="sectwo-title">Punctuality</h3>
@@ -93,7 +93,7 @@
             <li class="sectwo-li">
               <div class="sectwo-container">
                 <svg class="sectwo-svg">
-                  <use href="./images/icon.svg#icon-diagram"></use>
+                  <use href="./images/icon.svg#icon-diagram" width="64px" height="64px"></use>
                 </svg>
               </div>
               <h3 class="sectwo-title">Diligence</h3>
@@ -105,7 +105,7 @@
             <li class="sectwo-li">
               <div class="sectwo-container">
                 <svg class="sectwo-svg">
-                  <use href="./images/icon.svg#icon-astronaut"></use>
+                  <use href="./images/icon.svg#icon-astronaut"  width="64px" height="64px"></use>
                 </svg>
               </div>
               <h3 class="sectwo-title">Technologies</h3>
