--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
           <ul class="sectwo-ul">
             <li class="sectwo-li">
               <div class="sectwo-container">
-                <svg class="sectwo-svg">
-                  <use href="./images/icon.svg#icon-antenna" width="64px" height="64px"></use>
+                <svg class="sectwo-svg" width="64px" height="64px">
+                  <use href="./images/icon.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="sectwo-title">Strategy</h3>
@@ -80,8 +80,8 @@
             </li>
             <li class="sectwo-li">
               <div class="sectwo-container">
-                <svg class="sectwo-svg">
-                  <use href="./images/icon.svg#icon-clock" width="64px" height="64px"></use>
+                <svg class="sectwo-svg"  width="64px" height="64px">
+                  <use href="./images/icon.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="sectwo-title">Punctuality</h3>
@@ -92,8 +92,8 @@
             </li>
             <li class="sectwo-li">
               <div class="sectwo-container">
-                <svg class="sectwo-svg">
-                  <use href="./images/icon.svg#icon-diagram" width="64px" height="64px"></use>
+                <svg class="sectwo-svg" width="64px" height="64px">
+                  <use href="./images/icon.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="sectwo-title">Diligence</h3>
@@ -104,8 +104,8 @@
             </li>
             <li class="sectwo-li">
               <div class="sectwo-container">
-                <svg class="sectwo-svg">
-                  <use href="./images/icon.svg#icon-astronaut"  width="64px" height="64px"></use>
+                <svg class="sectwo-svg" width="64px" height="64px">
+                  <use href="./images/icon.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="sectwo-title">Technologies</h3>
